deploy/ssnapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testdemo
  labels:
    app: testdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testdemo
  template:
    metadata:
      labels:
        app: testdemo
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      volumes:
        - name: testdemo-storage
          persistentVolumeClaim:
            claimName: testdemo-claim
      containers:
      - name: ssnapi
        image: registry.local:5000/TestDemo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        resources:
          requests:
            memory: "128Mi"
            cpu: "16m"
          limits:
            memory: "256Mi"
            cpu: "512m"
        volumeMounts:
          - mountPath: "/data"
            name: testdemo-storage
---
