deploy/ssnapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testdemo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "testdemo.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: testdemo
            port:
              number: 80
  - host: "testdemo"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: testdemo
            port:
              number: 80
